syntax = "proto3";

package com.digirise.proto;

//option java_package = "com.example.tutorial";
option java_outer_classname = "GatewayDataProtos";

import public "common_structures.proto";

message DeviceData {
    string deviceName = 1;
 //   DeviceType deviceType = 2;
    repeated DeviceReadings allReadingsFromDevice = 2;
    string timestamp = 3;
}

message DevicesReadingsFromGateway {
    string gatewayTimestamp = 1;
    string gatewayName = 2;
    string customerName = 3;
    repeated DeviceData deviceData = 4;
}

// Request sent by gateway
// message DeviceReadingsFromGateway message
// Response sent by server
// message DeviceReadingsResponse

